0.004 2024-10-31
  [New Features]
    * Add Net::SSLeay::X509_STORE#set_flags method.
    * Add Net::SSLeay::X509_CRL class.
    * Add Net::SSLeay::X509_STORE_CTX class.
    * Add Net::SSLeay::X509_STORE#add_crl method.
  
0.003 2024-10-30
  [New Features]
    * Add Net::SSLeay::SSL_METHOD#SSLv23_method method.
    * Add Net::SSLeay::SSL_METHOD#TLS_method method.
    
0.002 2024-10-30
  [New Features]
    * Add Net::SSLeay::SSL_CTX#set_options
    * Add Net::SSLeay::SSL_CTX#get_options
    * Add Net::SSLeay::SSL_CTX#clear_options
    * Add SPVM::Net::SSLeay::ConfigBuilder class to detect OpenSSL/LibreSSL include and lib directory.
    
0.001 2023-08-19
  [Changes]
    * First release.
  