@@ -31,3 +31,28 @@ int32_t SPVM__Net__SSLeay__PEM__read_bio_X509(SPVM_ENV* env, SPVM_VALUE* stack) 
   
   return 0;
 }
+
+int32_t SPVM__Net__SSLeay__PEM__read_bio_X509_CRL(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  void* obj_bp = stack[0].oval;
+  
+  if (!obj_bp) {
+    return env->die(env, stack, "The $bp must be defined.", __func__, FILE_NAME, __LINE__);
+  }
+  
+  BIO* bp = env->get_pointer(env, stack, obj_bp);
+  
+  X509_CRL* x509_crl = PEM_read_bio_X509_CRL(bp, NULL, 0, NULL);
+  
+  if (!x509_crl) {
+    return env->die(env, stack, "PEM_read_bio_X509_CRL failed.", __func__, FILE_NAME, __LINE__);
+  }
+  
+  void* obj_x509_crl = env->new_pointer_object_by_name(env, stack, "Net::SSLeay::X509_CRL", x509_crl, &error_id, __func__, FILE_NAME, __LINE__);  if (error_id) { return error_id; }
+  
+  stack[0].oval = obj_x509_crl;
+  
+  return 0;
+}
